# MythosChess

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  spsa.py  train_nnue.py
.github/workflows/: ci.yml
assets/logos/: README.md
docs/: ARCHITECTURE.md  IMPROVING.md  RELEASING.md  TRAINING.md
src/: attacks.rs  bitboard.rs  eval.rs  lib.rs  main.rs  movegen.rs  nnue.rs  perft.rs  position.rs  search.rs  see.rs  tt.rs  types.rs  uci.rs  zobrist.rs
trainer-burn/: .gitignore  Cargo.toml
trainer-burn/src/: main.rs
web/: index.html
